--- a/MiniWeb/style.css
+++ b/MiniWeb/style.css
@@ -2,7 +2,7 @@
     padding: 80px; 
     text-align: center; 
     background: #f8962d; 
-    opacity: .8;
+    opacity: .;
     color: white; 
   }
   
