--- a/saas_demos/css/demo1.css
+++ b/saas_demos/css/demo1.css
@@ -30,7 +30,7 @@ p {
 
 p:nth-of-type(1) {
   background-color: yellow;
-  border: 2px dotted deeppink;
+  border: 2px dashed deeppink;
 }
 
 p:nth-of-type(2) {
@@ -39,16 +39,4 @@ p:nth-of-type(2) {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
-p:nth-of-type(3) {
-  background-color: black;
-}
-
-p:nth-of-type(4) {
-  background-color: violet;
-  border: 2px dashed deeppink;
-  font-weight: bold;
-  font-style: italic;
-  color: red;
-}
-
-/*# sourceMappingURL=scssdemo1.css.map */
+/*# sourceMappingURL=demo1.css.map */
